--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "ckeditor5-custom-build",
+  "name": "@nicholopolus/ckeditor5-custom-build",
   "author": "CKSource",
   "description": "A custom CKEditor 5 build made by the CKEditor 5 online builder.",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "license": "SEE LICENSE IN LICENSE.md",
-  "private": true,
   "main": "./build/ckeditor.js",
   "types": "./build/ckeditor.d.ts",
   "dependencies": {
