--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@nicholopolus/ckeditor5-custom-build",
   "author": "CKSource",
   "description": "A custom CKEditor 5 build made by the CKEditor 5 online builder.",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "license": "SEE LICENSE IN LICENSE.md",
   "main": "./build/ckeditor.js",
   "types": "./build/ckeditor.d.ts",
@@ -10,6 +10,7 @@
     "@ckeditor/ckeditor5-alignment": "41.2.1",
     "@ckeditor/ckeditor5-autoformat": "41.2.1",
     "@ckeditor/ckeditor5-basic-styles": "41.2.1",
+    "@ckeditor/ckeditor5-clipboard": "^41.2.1",
     "@ckeditor/ckeditor5-cloud-services": "41.2.1",
     "@ckeditor/ckeditor5-editor-classic": "41.2.1",
     "@ckeditor/ckeditor5-essentials": "41.2.1",
